# CSE528-Caustics

./: CMakeLists.txt  README.md
include/glad/: glad.h
include/renderer/: callbacks.h  camera.h  photon_map.h  renderer_cpu.h  renderer_gpu.h  scene.h  shader_utils.h  texture.h  utils.h
shaders/: cpu_fullscreen.frag  display.frag  fullscreen_quad.vert  raytrace.comp
src/: glad.c  main.cpp  photon_map.cpp  renderer_cpu.cpp  renderer_gpu.cpp  scene.cpp  shader_utils.cpp  texture.cpp  utils.cpp
textures/: brick_wall.ppm  ceiling.ppm  checkerboard.ppm
